Update UI, fix image alignment and resizing issues

--- a/front/gallerifront/src/app/image-scroll/image-scroll.component.css
+++ b/front/gallerifront/src/app/image-scroll/image-scroll.component.css
@@ -1,14 +1,14 @@
 cdk-virtual-scroll-viewport {
   height: 100vh; /* fixed viewport height*/
-  width: 70vw;
+  width: 85vw;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  list-style: none;
+  /* list-style: none; */
 }
 
-li {
+.imgdiv {
   height: 700px;
   margin: 10px;
   padding: 10px;
@@ -16,6 +16,7 @@ li {
 }
 
 img {
-  max-width: 100%;
-  height: 100%;
+  max-width: 98%;
+  height: auto;
+  max-height: 98%;
 }
