--- a/front/gallerifront/src/styles.css
+++ b/front/gallerifront/src/styles.css
@@ -4,5 +4,4 @@
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: darkgray;
 }
